syntax = "proto3";
package grpc.solo.io;
option go_package = "github.com/solo-io/service-mesh-hub/services/mesh-apiserver/pkg/api/v1";

import "service-mesh-hub/api/discovery/v1alpha1/kubernetes_cluster.proto";
import "service-mesh-hub/api/core/v1alpha1/ref.proto";


message KubernetesCluster {
    discovery.zephyr.solo.io.KubernetesClusterSpec spec = 1;
    // reserved for status
    reserved 2;
    core.zephyr.solo.io.ResourceRef ref = 3;
    map<string, string> labels = 4;
}

message ListKubernetesClustersRequest {}

message ListKubernetesClustersResponse {
    repeated KubernetesCluster clusters = 1;
}

service KubernetesClusterApi {
    rpc ListClusters (ListKubernetesClustersRequest) returns (ListKubernetesClustersResponse) {}
}
