syntax = "proto3";
package grpc.solo.io;
option go_package = "github.com/solo-io/service-mesh-hub/services/mesh-apiserver/pkg/api/v1";

import "service-mesh-hub/api/discovery/v1alpha1/mesh_service.proto";
import "service-mesh-hub/api/core/v1alpha1/ref.proto";


message MeshService {
    discovery.zephyr.solo.io.MeshServiceSpec spec = 1;
    discovery.zephyr.solo.io.MeshServiceStatus status = 2;
    core.zephyr.solo.io.ResourceRef ref = 3;
    map<string, string> labels = 4;
}

message ListMeshServicesRequest {
}

message ListMeshServicesResponse {
    repeated MeshService mesh_services = 1;

}

service MeshServiceApi {
    rpc ListMeshServices (ListMeshServicesRequest) returns (ListMeshServicesResponse) {}
}
